# homolock-2

./: .gitignore  README.md  Untitled  demo.sh  homoLock-key.pem
client_cpp/: CMakeLists.txt
client_cpp/src/: main.cpp
data/: README.md  employees.csv
scripts/: setup-cloud.sh
server_py/: install_seal_python.sh  requirements.txt
server_py/app/: __init__.py  he_engine.py  main.py
server_py/app/storage/: __init__.py  file_db.py
server_py/client/: __init__.py  cli.py
server_py/cpp_worker/: CMakeLists.txt
server_py/cpp_worker/src/: main.cpp
server_py/data/: employees.json  jobs.json  sessions.json
server_py/data/db/: jobs.json  sessions.json
server_py/docs/: DATA_AND_OPS.md  DEPLOY-AWS.md
server_py/postman/: HomoLock-HR.postman_collection.json  POSTMAN.md
server_py/scripts/: __init__.py  decrypt_job.py  fetch_and_decrypt_results.py  generate_static_data.py  serve_postman_keys.py  upload_from_csv.py
server_py/static/: bonus_points.ct  hours.ct  meta.json  params.seal  public_key.seal  relin_keys.seal  salary.ct
